crates/batchalign/batchalign-cli/tests/ml_golden/snapshots/ml_golden__ml_golden__translate__golden__translate_eng_simple.snap
---
source: crates/batchalign-app/tests/ml_golden/translate/golden.rs
expression: "&results[0].content"
---
@UTF8
@Begin
@Languages:	eng
@Participants:	PAR Participant
@ID:	eng|test|PAR|||||Participant|||
*PAR:	hello world .
%xtra:	hello world
@End
