crates/batchalign/batchalign-cli/tests/ml_golden/snapshots/ml_golden__ml_golden__translate__golden__translate_spa_to_eng.snap
---
source: crates/batchalign-app/tests/ml_golden/translate/golden.rs
expression: "&results[0].content"
---
@UTF8
@Begin
@Languages:	spa
@Participants:	PAR Participant
@ID:	spa|test|PAR|||||Participant|||
*PAR:	el gato es grande .
%xtra:	the cat is big
@End
